sys/ufs/ufs/ufs_inode.c
@@ -36,7 +36,7 @@
  * SUCH DAMAGE.
  *
  *	@(#)ufs_inode.c	8.9 (Berkeley) 5/14/95
- * $Id: ufs_inode.c,v 1.21 1997/12/02 11:43:45 bde Exp $
+ * $Id: ufs_inode.c,v 1.22 1998/03/30 09:56:16 phk Exp $
  */
 
 #include "opt_quota.h"
@@ -116,16 +116,22 @@ ufs_reclaim(ap)
 {
 	register struct inode *ip;
 	register struct vnode *vp = ap->a_vp;
+	struct timeval tv;
 #ifdef QUOTA
 	int i;
 #endif
 
 	if (prtactive && vp->v_usecount != 0)
 		vprint("ufs_reclaim: pushing active", vp);
+	ip = VTOI(vp);
+	if (ip->i_flag & IN_LAZYMOD) {
+		ip->i_flag |= IN_MODIFIED;
+		getmicrotime(&tv);
+		UFS_UPDATE(vp, &tv, &tv, 0);
+	}
 	/*
 	 * Remove the inode from its hash chain.
 	 */
-	ip = VTOI(vp);
 	ufs_ihashrem(ip);
 	/*
 	 * Purge old data structures associated with the inode.
